8313277: Resolve multiple definition of 'normalize' when statically linking JDK native libraries with user code

Contributed by cjmoon1.